--- a/Views/Listings/Create.cshtml
+++ b/Views/Listings/Create.cshtml
@@ -15,7 +15,7 @@
             <!-- Vendor ID -->
             <div>
 
-                <input asp-for="VendorID" hidden value="1"
+                <input asp-for="VendorID" hidden value="unknown"
                     class="w-full border border-light rounded-lg px-3 py-2 focus:ring-2 focus:ring-primary focus:outline-none" />
                 <span asp-validation-for="VendorID" class="text-red-600 text-sm"></span>
             </div>
